--- a/index.html
+++ b/index.html
@@ -5,86 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Fotografico</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <main>
-    <h1>Arquitetura</h1>
-    <nav>
+     <header class="estilo header">
+     <h1>Arquitetura</h1>
+     <nav class="menu">
         <ul>
-            <li><a href="Home">Home</a></li><br>
-            <li><a href="News">News</a></li><br>
-            <li><a href="Culture">Culture</a></li><br>
-            <li><a href="Contato">Contato</a></li><br>
+            <li><a href="Home">Home</a></li>
+            <li><a href="News">News</a></li>
+            <li><a href="Culture">Culture</a></li>
+            <li><a href="Contato">Contato</a></li>
         </ul>
-    </nav>
-    <img src="img/arquitetura (1).jpg" alt="Castelo" height="490px" width="1000px">
-    <br><br>
-    <div> <!-- div contem 4 divisões -->
-        <div> 
-          <img src="img/arquitetura (2).jpg" alt="Portico" height="250px" width="250px"> 
-          <h2>Portico</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ab ex atque ipsum.</p>
-        </div>
-        <div>
-          <img src="img/arquitetura (3).jpg" alt="Escadas" height="250px" width="250px"> 
-          <h2>Escada Moderna</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ab ex atque ipsum.</p>
-        </div>
-        <div>
-          <img src="img/arquitetura (4).jpg" alt="arquitetura moderna" height="250px" width="250px"> 
-          <h2>Arquitetura Moderna</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ab ex atque ipsum.</p>
-        </div>
-        <div>
-          <img src="img/arquitetura (5).jpg" alt="Predios" height="250px" width="250px"> 
-          <h2>Torre</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ab ex atque ipsum.</p>
-        </div>
-    </div>
-    <div> <!-- contem 3 div -->
-        <div>
-          <h2>GALERIA</h2>
-          <figure>
-              <img src="img/arquitetura (6).jpg" alt="Bases Antigas" height="100" width="150">
-              <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-          </figure>
-          <figure>
-            <img src="img/arquitetura (7).jpg" alt=" Janelas de Castelo" height="100" width="150">
-            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-        </figure>
-        <figure>
-            <img src="img/arquitetura (8).jpg" alt="Bases Altas" height="100" width="150">
-            <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-        </figure>
-        </div>
-        <div>
-          <figure>
-              <img src="img/arquitetura (9).jpg" alt=" Teto do castelo" height="100" width="150">
-              <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-          </figure>
-          <figure>
-              <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
-              <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Ut, quo. Blanditiis.</figcaption>
-          </figure>
-          <figure>
-              <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
-              <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-        </figure>
-        </div>
-        <div>
-            <h2>Arquitetura Moderna</h2>
-            <img src="img/arquitetura (12).jpg" alt="arquitetura moderna" height="300" width="700">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid quas consectetur ratione perspiciatis quibusdam totam illo earum explicabo, dignissimos suscipit voluptatibus voluptate dolorum, assumenda laudantium nisi. Iusto atque perspiciatis exercitationem.</p>
-        </div>
-    </div>
-    <div>
-        <div>
-          <h2>Curiosidades</h2> 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat officiis rem in porro alias doloremque magnam debitis eligendi nam id?</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam a at ad quod optio, rem voluptates est similique animi ut repellat perspiciatis soluta saepe vero qui minima asperiores autem error quidem neque fuga modi, nobis consequatur? Vel, doloribus dolorem corrupti optio est reprehenderit quibusdam deserunt, quasi, iure aliquam dolor qui.</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil fugit culpa molestias esse blanditiis ipsa labore mollitia? Quo error deserunt voluptatum eum molestiae, enim debitis</p>
-        </div>
-        <div>
+     </nav>   
+     </header>
+    <div class="hero"></div>  
+     <div> <!-- Primeira Seção -->
+            <figure>
+                <img src="img/arquitetura (6).jpg" alt="Bases Antigas" height="150" width="200">
+                <figcaption>Lorem ipsum dolor.</figcaption>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
+            </figure>
+            <figure>
+                <img src="img/arquitetura (7).jpg" alt=" Janelas de Castelo" height="100" width="150">
+                <figcaption>Lorem ipsum dolor.</figcaption>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, autem.</p>
+            </figure>
+            <figure>
+                <img src="img/arquitetura (8).jpg" alt="Bases Altas" height="100" width="150">
+                <figcaption>Lorem ipsum dolor.</figcaption>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, illo?</p>
+            </figure>
+            <figure>
+                <img src="img/arquitetura (9).jpg" alt=" Teto do castelo" height="100" width="150">
+                <figcaption>Lorem ipsum dolor.</figcaption>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, laborum.</p>
+            </figure>
+     </div>
+     <div> <!-- Segunda Seção -->
+          <div> <!-- Bloco1 -->
+                <figure>
+                    <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
+                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Ut, quo.  Blanditiis.</figcaption>
+                </figure>
+                <figure>
+                    <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
+                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
+                </figure>   
+                <figure>
+                    <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
+                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
+                </figure>  
+          </div>
+          <div><!-- Bloco2 -->
+            <figure>
+                <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
+                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Ut, quo.  Blanditiis.</figcaption>
+            </figure>
+            <figure>
+                <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
+                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
+            </figure>   
+            <figure>
+                <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
+                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
+            </figure>  
+          </div>
+          <div>
+                <h2>Arquitetura Moderna</h2>
+                <img src="img/arquitetura (12).jpg" alt="arquitetura moderna" height="300" width="700">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid quas consectetur ratione perspiciatis quibusdam totam illo earum explicabo, dignissimos suscipit voluptatibus voluptate dolorum, assumenda laudantium nisi. Iusto atque perspiciatis exercitationem.</p>
+          </div>
+     </div>
+     <div>
+          <div>
+                <h2>Curiosidades</h2> 
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat officiis rem in porro alias doloremque magnam debitis eligendi nam id?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam a at ad quod optio, rem voluptates est similique animi ut repellat perspiciatis soluta saepe vero qui minima asperiores autem error quidem neque fuga modi, nobis consequatur? Vel, doloribus dolorem corrupti optio est reprehenderit quibusdam deserunt, quasi, iure aliquam dolor qui.</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil fugit culpa molestias esse blanditiis ipsa labore mollitia? Quo error deserunt voluptatum eum molestiae, enim debitis</p>
+          </div>
+     <div>
         <h2>Links de Interese</h2>  
         <ul>
             <li><a href="aaaaaaaaaaaa">Espanha</a></li>
@@ -96,11 +97,11 @@
             <li><a href="iiiiiiiiiiii">França</a></li>
             <li><a href="jjjjjjjjjjjj">Rusia</a></li>
         </ul>
-        </div>
-    </div>
+     </div>
+     </div>
 </main>
 </body>
-<footer>
+<footer class="estilo">
 <p> Entre en contacto atraves<a href="mailto:@gmail.com">Email</a></p>
          &copy;    2022 
 </footer>
