--- a/index.html
+++ b/index.html
@@ -21,60 +21,69 @@
      </nav>   
      </header>
     <div class="hero"></div>  
-     <div> <!-- Primeira Seção -->
-            <figure>
-                <img src="img/arquitetura (6).jpg" alt="Bases Antigas" height="150" width="200">
-                <figcaption>Lorem ipsum dolor.</figcaption>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
-            </figure>
-            <figure>
-                <img src="img/arquitetura (7).jpg" alt=" Janelas de Castelo" height="100" width="150">
-                <figcaption>Lorem ipsum dolor.</figcaption>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, autem.</p>
-            </figure>
-            <figure>
-                <img src="img/arquitetura (8).jpg" alt="Bases Altas" height="100" width="150">
-                <figcaption>Lorem ipsum dolor.</figcaption>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, illo?</p>
-            </figure>
-            <figure>
-                <img src="img/arquitetura (9).jpg" alt=" Teto do castelo" height="100" width="150">
-                <figcaption>Lorem ipsum dolor.</figcaption>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, laborum.</p>
-            </figure>
-     </div>
-     <div> <!-- Segunda Seção -->
-          <div> <!-- Bloco1 -->
-                <figure>
+
+ <div class="container"> <!-- Primeira Seção -->
+         <div class="box box1">
+            <img src="img/arquitetura (6).jpg" alt="Bases Antigas" height="180" width="180">
+            <h2> Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
+         </div>
+
+         <div class="box box2">
+            <img src="img/arquitetura (7).jpg" alt="Bases Antigas" height="180" width="180">
+            <h2> Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
+         </div>
+
+         <div class="box box3">
+            <img src="img/arquitetura (8).jpg" alt="Bases Antigas" height="180" width="180">
+            <h2> Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
+         </div>
+
+         <div class="box box4">
+            <img src="img/arquitetura (9).jpg" alt="Bases Antigas" height="180" width="150">
+            <h2> Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae, quia!</p>
+         </div>
+
+ </div>
+
+     <div class="container2"> <!-- Segunda Seção -->
+          <div class="bloco"> <!-- Bloco1 -->
+            <h2>Lorem, ipsum dolor.</h2>
+                <div class="item">
                     <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Ut, quo.  Blanditiis.</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-                </figure>   
-                <figure>
-                    <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-                </figure>  
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+                </div>
+                <div class="item">
+                    <img src="img/arquitetura (11).jpg" alt=" Grande Sala" height="100" width="150">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+                </div>
+                <div class="item">
+                    <img src="img/arquitetura (12).jpg" alt=" Grande Sala" height="100" width="150">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+                </div>
+         </div>
+
+          <div class="bloco"><!-- Bloco2 -->
+            <h2>Lorem, ipsum dolor.</h2>
+            <div class="item">
+                <img src="img/arquitetura (1).jpg" alt=" Grande Sala" height="100" width="150">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+            </div>
+            <div class="item">
+                <img src="img/arquitetura (2).jpg" alt=" Grande Sala" height="100" width="150">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+            </div>
+            <div class="item">
+                <img src="img/arquitetura (3).jpg" alt=" Grande Sala" height="100" width="150">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
+            </div>
           </div>
-          <div><!-- Bloco2 -->
-            <figure>
-                <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
-                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Ut, quo.  Blanditiis.</figcaption>
-            </figure>
-            <figure>
-                <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
-                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-            </figure>   
-            <figure>
-                <img src="img/arquitetura (11).jpg" alt="Portico" height="100" width="150">
-                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, quo. Blanditiis.</figcaption>
-            </figure>  
-          </div>
-          <div>
+          <div class="bloco1">
                 <h2>Arquitetura Moderna</h2>
-                <img src="img/arquitetura (12).jpg" alt="arquitetura moderna" height="300" width="700">
+                <img src="img/arquitetura (4).jpg" alt="arquitetura moderna" height="300" width="150">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid quas consectetur ratione perspiciatis quibusdam totam illo earum explicabo, dignissimos suscipit voluptatibus voluptate dolorum, assumenda laudantium nisi. Iusto atque perspiciatis exercitationem.</p>
           </div>
      </div>
