Finalizando Layout Responsivo  do Exercicio de CSS

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
  </div>
 
      <div class="container2"> <!-- Segunda Seção -->
-          <div class="bloco"> <!-- Bloco1 -->
+          <div class="bloco bloco1"> <!-- Bloco1 -->
             <h2>Lorem, ipsum dolor.</h2>
                 <div class="item">
                     <img src="img/arquitetura (10).jpg" alt=" Grande Sala" height="100" width="150">
@@ -66,7 +66,7 @@
                 </div>
          </div>
 
-          <div class="bloco"><!-- Bloco2 -->
+          <div class="bloco Bloco2"><!-- Bloco2 -->
             <h2>Lorem, ipsum dolor.</h2>
             <div class="item">
                 <img src="img/arquitetura (1).jpg" alt=" Grande Sala" height="100" width="150">
@@ -81,37 +81,38 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, architecto.</p>
             </div>
           </div>
-          <div class="bloco1">
+          <div class="bloco bloco3">
                 <h2>Arquitetura Moderna</h2>
-                <img src="img/arquitetura (4).jpg" alt="arquitetura moderna" height="300" width="150">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid quas consectetur ratione perspiciatis quibusdam totam illo earum explicabo, dignissimos suscipit voluptatibus voluptate dolorum, assumenda laudantium nisi. Iusto atque perspiciatis exercitationem.</p>
+                <div><img src="img/arquitetura (4).jpg" alt="arquitetura moderna" height="200" width="500"></div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid quas consectetur ratione perspiciatis quibusdam totam illo earum explicabo, dignissimos suscipit voluptatibus voluptate dolorum, assumenda laudantium nisi. Iusto atque perspiciatis exercitationem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad odit ab cupiditate nisi facere error, doloribus explicabo veritatis nemo nulla totam, nobis quia cumque sapiente laudantium perferendis enim ea similique adipisci! Ducimus, porro numquam explicabo voluptates voluptatem tenetur iste quos.</p>
           </div>
      </div>
-     <div>
-          <div>
+
+     <div class="container3">
+          <div class="caja caja0">
                 <h2>Curiosidades</h2> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat officiis rem in porro alias doloremque magnam debitis eligendi nam id?</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam a at ad quod optio, rem voluptates est similique animi ut repellat perspiciatis soluta saepe vero qui minima asperiores autem error quidem neque fuga modi, nobis consequatur? Vel, doloribus dolorem corrupti optio est reprehenderit quibusdam deserunt, quasi, iure aliquam dolor qui.</p>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil fugit culpa molestias esse blanditiis ipsa labore mollitia? Quo error deserunt voluptatum eum molestiae, enim debitis</p>
           </div>
-     <div>
+     <div class="caja caja1">
         <h2>Links de Interese</h2>  
         <ul>
-            <li><a href="aaaaaaaaaaaa">Espanha</a></li>
-            <li><a href="bbbbbbbbbbbb">Italia</a></li>
-            <li><a href="cccccccccccc">Venezuela</a></li>
-            <li><a href="dddddddddddd">Polonia</a></li>
-            <li><a href="eeeeeeeeeeee">Colombia</a></li>
-            <li><a href="hhhhhhhhhhhh">Salvador</a></li>
-            <li><a href="iiiiiiiiiiii">França</a></li>
-            <li><a href="jjjjjjjjjjjj">Rusia</a></li>
+            <li><a href="aaaaaaaaaaaa">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="bbbbbbbbbbbb">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="cccccccccccc">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="dddddddddddd">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="eeeeeeeeeeee">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="hhhhhhhhhhhh">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="iiiiiiiiiiii">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
+            <li><a href="jjjjjjjjjjjj">Lorem ipsum dolor sit amet consectetur adipisicing.</a></li>
         </ul>
      </div>
      </div>
 </main>
 </body>
-<footer class="estilo">
-<p> Entre en contacto atraves<a href="mailto:@gmail.com">Email</a></p>
+<footer class="estilo footer1">
+<p> Entre en contacto atraves<a href="https://www.linkedin.com/in/gilbonett/">Linkedin</a></p>
          &copy;    2022 
 </footer>
 </html>
